<feature:8.10>: video detail styling - add video detail css and a condition clicked a video or not

--- a/src/components/video_item/video_item.module.css
+++ b/src/components/video_item/video_item.module.css
@@ -1,8 +1,15 @@
 /** @format */
 
 .container {
-  width: 50%;
   padding: 0.2em;
+}
+
+.container.list {
+  width: 100%;
+}
+
+.container.grid {
+  width: 50%;
 }
 
 .video {
