--- a/src/components/video_detail/video_detail.module.css
+++ b/src/components/video_detail/video_detail.module.css
@@ -1,4 +1,10 @@
-.container {
-  width: 50%;
+/** @format */
+
+.detail {
+  width: 100%;
   padding: 0.2em;
+}
+
+.description {
+  white-space: pre-line;
 }
