--- a/src/app.module.css
+++ b/src/app.module.css
@@ -4,14 +4,20 @@
   max-width: 80rem;
 }
 
-.content{
+.content {
   display: flex;
 }
 
-.detail{
-  flex: 1 1 70%
+.detail {
+  flex: 1 1 70%;
 }
 
-.list{
-  flex: 1 1 30%
+.list {
+  flex: 1 1 30%;
+}
+
+@media screen and (max-width: 48rem) {
+  .content {
+    flex-direction: column;
+  }
 }
